--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Erreur inattendue (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
@@ -58,9 +58,13 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>Erreur inattendue</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <img src="/images/erreur_500.png" alt="">
+    <p>Désolé le service rencontre un problème, nous travaillons pour le résoudre le plus rapidement possible.</p>
+    <p>Essayer de rafraîchir de la page ou bien ressayer plus tard.
+      Si vous avez besoin d'une aide immédiate merci de nous contacter.
+    </p>
   </div>
 </body>
 </html>
