--- a/public/500.html
+++ b/public/500.html
@@ -60,7 +60,7 @@
     <div>
       <h1>Erreur inattendue</h1>
     </div>
-    <img src="/images/erreur_500.png" alt="">
+    <img src="../images/image_error_500.png" alt="">
     <p>Désolé le service rencontre un problème, nous travaillons pour le résoudre le plus rapidement possible.</p>
     <p>Essayer de rafraîchir de la page ou bien ressayer plus tard.
       Si vous avez besoin d'une aide immédiate merci de nous contacter.
